--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.38.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
