--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
     "target": "es5",
     "module": "esnext",
     "lib": [
@@ -14,15 +13,11 @@
     "esModuleInterop": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
-    "suppressImplicitAnyIndexErrors": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "sourceMap": true,
     "baseUrl": "src",
-    "importHelpers": true,
-    "noImplicitAny": false,
     "typeRoots": [
       "./types",
       "node_modules/@types"
@@ -31,13 +26,16 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
+    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "**/*.js"
   ],
+  "extends": "./tsconfig-base.json",
   "exclude": [
     "node_modules",
-    "build"
-  ],
-  "extends": "./tsconfig-base.json"
+    ".next",
+    "out",
+    "cypress"
+  ]
 }
