--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-indexed-db": "^1.0.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
     "sass": "^1.38.1",
     "typescript": "~4.1.5",
     "uuid": "^8.3.2"
